--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -10,5 +10,26 @@
 		"it": "Italiano",
 		"ja": "日本語",
 		"pt": "Português"
-	}
+	},
+
+  "home": {
+    "title": "Inicio",
+    "aboutMe": {
+      "intro1": "Hola, soy",
+      "intro2": "[ Encuentrame en línea como <span class=\"!italic !underline\">Cezeta</span> ]",
+      "description": "Soy un apasionado <span class=\"!font-bold\">Ingeniero en Informática</span> que ha estado trabajando en el <span class=\"!font-bold\">desarrollo web Full-Stack</span> durante varios años. Hombre de múltiples intereses, siempre emocionado para enfrentar nuevos desafíos y crecer como desarrollador (y como aficionado 😄). Un jugador de equipo colaborativo, valoro los comentarios constructivos, el intercambio de conocimientos y fuertes lazos de equipo para crear software impactante.",
+      "note1": "Nací en <span class='text-lg rounded-lg'>🇦🇷</span> 🧉",
+      "note2": "Vivo en <span class='text-lg rounded-lg'>🇦🇺</span> 🦘"
+    },
+    "resume": {
+      "title": "Experiencia"
+    },
+    "contact": {
+      "title": "Contacto"
+    }
+  },
+  
+  "projects": {
+    "title": "Proyectos"
+  }
 }
